--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "babel-plugin-react-transform": "^2.0.2",
+    "babel-preset-es2015": "^6.14.0",
+    "babel-preset-react": "^6.11.1",
     "babelify": "^7.3.0",
     "bootstrap": "^3.3.7",
     "browserify": "^13.1.0",
@@ -16,14 +19,18 @@
     "grunt-browserify": "^5.0.0",
     "grunt-contrib-jshint": "^1.0.0",
     "grunt-contrib-watch": "^1.0.0",
+    "jquery": "^3.1.0",
     "load-grunt-tasks": "^3.5.2",
     "react": "^15.3.1",
+    "react-dom": "^15.3.1",
     "redux": "^3.6.0"
   },
   "dependencies": {
+    "connect-livereload": "^0.6.0",
     "grunt-contrib-clean": "^1.0.0",
     "grunt-contrib-connect": "^1.0.2",
     "grunt-contrib-htmlmin": "^2.0.0",
-    "grunt-contrib-sass": "^1.0.0"
+    "grunt-contrib-sass": "^1.0.0",
+    "react-redux": "^4.4.5"
   }
 }
