--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "ripe",
   "version": "1.0.0",
-  "description": "",
+  "description": "Authenticated references with Linked In",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "Stephen Parente <webmakersteve@gmail.com",
+  "license": "UNLICENSED",
   "devDependencies": {
     "babel-plugin-react-transform": "^2.0.2",
     "babel-preset-es2015": "^6.14.0",
@@ -15,22 +15,25 @@
     "babelify": "^7.3.0",
     "bootstrap": "^3.3.7",
     "browserify": "^13.1.0",
+    "connect-livereload": "^0.6.0",
     "grunt": "^1.0.1",
     "grunt-browserify": "^5.0.0",
-    "grunt-contrib-jshint": "^1.0.0",
-    "grunt-contrib-watch": "^1.0.0",
-    "jquery": "^3.1.0",
-    "load-grunt-tasks": "^3.5.2",
-    "react": "^15.3.1",
-    "react-dom": "^15.3.1",
-    "redux": "^3.6.0"
-  },
-  "dependencies": {
-    "connect-livereload": "^0.6.0",
     "grunt-contrib-clean": "^1.0.0",
     "grunt-contrib-connect": "^1.0.2",
     "grunt-contrib-htmlmin": "^2.0.0",
     "grunt-contrib-sass": "^1.0.0",
-    "react-redux": "^4.4.5"
+    "grunt-contrib-jshint": "^1.0.0",
+    "grunt-contrib-watch": "^1.0.0",
+    "jquery": "^3.1.0",
+    "load-grunt-tasks": "^3.5.2"
+  },
+  "dependencies": {
+    "body-parser": "^1.15.2",
+    "express": "^4.14.0",
+    "node-mailer": "^0.1.1",
+    "react": "^15.3.1",
+    "react-dom": "^15.3.1",
+    "react-redux": "^4.4.5",
+    "redux": "^3.6.0"
   }
 }
