--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
   },
   "dependencies": {
     "body-parser": "^1.15.2",
+    "bootstrap-sass": "^3.3.7",
     "express": "^4.14.0",
+    "grunt-contrib-imagemin": "^1.0.1",
     "node-mailer": "^0.1.1",
     "react": "^15.3.1",
     "react-dom": "^15.3.1",
